<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailLeague.DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_LeagueDetail"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/league_detail" />

            <TextView
                android:id="@+id/text_leagueName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/image_LeagueDetail"
                android:text="@string/league_text"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/text_leagueCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_leagueName"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/image_LeagueDetail"
                android:text="@string/league_country"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/league_website"
                android:textSize="16sp"
                android:id="@+id/text_leagueWebsite"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@id/text_leagueCountry"
                android:layout_toEndOf="@id/image_LeagueDetail"/>

            <ScrollView
                android:layout_below="@id/image_LeagueDetail"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_leagueDesc"
                    android:text="@string/league_description"
                    android:textSize="12sp"
                    android:textAlignment="center"/>
            </ScrollView>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progress_detail"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>